@@ -70,4 +70,13 @@
   <five:deprecatedManageAddDelete
       class=".content.PoiResponse.PoiResponse" />
 
+  <gs:upgradeStep
+      title="Poi responses"
+      description="Migrate old style to new style Poi responses."
+      source="1.1"
+      destination="1.2"
+      handler="Products.Poi.migration.migrate_responses"
+      sortkey="1"
+      profile="Products.Poi:default" />
+
 </configure>
